--- a/index.html
+++ b/index.html
@@ -1,14 +1,58 @@
-<table cellpadding="0" cellspacing="0" border="0" width="100%" style="background: #f5f5f5; min-width: 340px; font-size: 1px; line-height: normal;">
+<!DOCTYPE html>
+<html lang="en">
+<head>
+	<meta charset="UTF-8">
+	<title>2XU Email</title>
+</head>
+<body style="margin: 0; padding: 0;">
+<table cellpadding="0" cellspacing="0" border="0" width="100%" style="background: #ffffff; min-width: 340px; font-size: 1px; line-height: normal;">
  	<tr>
    		<td align="center" valign="top">
    			<table cellpadding="0" cellspacing="0" border="0" width="700" class="table700" style="max-width: 700px; min-width: 320px; background: #ffffff;">
    				<tr>
    					<td align="center" valign="top">
-
-
+						<table cellpadding="0" cellspacing="0" border="0">
+							<tr>
+								<td>
+									<a href="#" target="_blank" style="font-family: Arial, Tahoma, Geneva, sans-serif; color: #444343; font-size: 10px; line-height: 16px; text-decoration: none;">   
+ 										<font face="Arial, sans-serif" color="#444343" style="font-size: 10px; line-height: 16px; text-decoration: none;">
+             								<span style="font-family: Arial, Tahoma, Geneva, sans-serif; color: #444343; font-size: 10px; line-height: 16px; text-decoration: underline;">Магазин</span>
+             							</font>
+ 									</a>
+								</td>
+								<td> 
+									<font face="Arial, sans-serif" color="#c3c3c3" style="font-size: 10px; line-height: 16px;">
+     									<span style="font-family: Arial, Tahoma, Geneva, sans-serif; color: #c3c3c3; font-size: 10px; line-height: 16px;">&nbsp;&nbsp;&nbsp;|&nbsp;&nbsp;&nbsp;</span>
+     								</font>
+								</td>
+								<td>
+									<a href="#" target="_blank" style="font-family: Arial, Tahoma, Geneva, sans-serif; color: #444343; font-size: 10px; line-height: 16px; text-decoration: none;">   
+ 										<font face="Arial, sans-serif" color="#444343" style="font-size: 10px; line-height: 16px; text-decoration: none;">
+             								<span style="font-family: Arial, Tahoma, Geneva, sans-serif; color: #444343; font-size: 10px; line-height: 16px; text-decoration: underline;">Бесплатная доставка</span>
+             							</font>
+ 									</a>
+								</td>
+								<td>
+									<a href="#" target="_blank" style="font-family: Arial, Tahoma, Geneva, sans-serif; color: #444343; font-size: 10px; line-height: 16px; text-decoration: none;">   
+ 										<font face="Arial, sans-serif" color="#444343" style="font-size: 10px; line-height: 16px; text-decoration: none;">
+             								<span style="font-family: Arial, Tahoma, Geneva, sans-serif; color: #444343; font-size: 10px; line-height: 16px; text-decoration: underline;">30 дней на возврат</span>
+             							</font>
+ 									</a>
+								</td>
+								<td>
+									<a href="#" target="_blank" style="font-family: Arial, Tahoma, Geneva, sans-serif; color: #444343; font-size: 10px; line-height: 16px; text-decoration: none;">   
+ 										<font face="Arial, sans-serif" color="#444343" style="font-size: 10px; line-height: 16px; text-decoration: none;">
+             								<span style="font-family: Arial, Tahoma, Geneva, sans-serif; color: #444343; font-size: 10px; line-height: 16px; text-decoration: underline;">Веб-версия</span>
+             							</font>
+ 									</a>
+								</td>
+							</tr>
+						</table>
 					</td>
 				</tr>
 			</table>
 		</td>
 	</tr>
 </table>
+</body>
+</html>
